--- a/index.html
+++ b/index.html
@@ -5,31 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header>
       <h1>Password Generator</h1>
     </header>
     <h2>Generate a Password</h2>
-    <form id="char">
-        <input type="checkbox" name="character" value="special" id="specChar">Special Characters<br>
-        <input type="checkbox" name="character" value="numeric" id="numChar">Numeric Characters<br>
-        <input type="checkbox" name="character" value="lowercase" id="lowerCase">Lowercase<br>
-        <input type="checkbox" name="character" value="uppercase" id="upperCase">Uppercase<br>
-        <input type="text" id="passlength" placeholder="Length of Password" />
-        <button id="generate">Generate Password</button>
-    </form>
     <textarea
       readonly
       id="password"
       placeholder="Your Secure Password"
       aria-label="Generated Password"
     ></textarea>
-    
+    <button id="generate">Generate Password</button>
     <button id="copy">
       Copy to Clipboard
     </button>
-    <script src="/script.js"></script>
+    <script src="./script.js" ></script>
   </body>
 </html>
